# AStart

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  verify_final.py
astart/: __init__.py  solver.py
astart/cpp/: solver.cpp
benchmarks/: check_quality.py  compare_external.py  compare_external_full.py  compare_igraph.py  compare_networkit.py  compare_rust.py  consolidated_report.py  direct_check.py  download_maps.sh  final_verification.py  movingai_final_results.csv  plot_results.py  run_all_movingai.py  run_extreme_k.py  run_final_movingai.py  run_high_k.py  test_optimality.py  verified_comparison.py
benchmarks/cpp/: main.cpp
benchmarks/movingai/: local_test.map  local_test.map.scen
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: lib.rs  main.rs
examples/: comparison.py  complex_failure_case.py  comprehensive_benchmark.py  expensive_heuristic.py
tests/: test_solver.py
