[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astart"
version = "0.1.0"
description = "A Python implementation of Batch A* (Frontier Reduction) algorithm"
readme = "README.md"
authors = [{ name = "Onur Karakaslar", email = "eonurkara@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/eonurk/AStart"
